# mlx90640-driver-evb9064x-py

./: .gitignore  README.md  app-tests-jetson-nano-report.html  app-tests-rpi4-report.html  app-tests-ubuntu-pc-report.html  app-tests-win10-pc-report.html  mlx90640_dump.py  setup.cfg  setup.py
.github/workflows/: build-test-publish.yml
evb9064x/: __init__.py  evb9064x.py
evb9064x/c-code/: Makefile  main.c  serial_debug.c
evb9064x/c-code/inc/: MLX90640_I2C_Driver_evb9064x.h  evb9064x.h  m_sp.h
evb9064x/c-code/src/: MLX90640_I2C_Driver_evb9064x.c  evb9064x.c  m_sp.c  rs232.c
tests/app_testing/: test_init.py
