[metadata]
name = mlx90640-driver-evb9064x
url = https://github.com/melexis-fir/mlx90640-driver-evb9064x-py
project_urls =
    Documentation = https://melexis-fir.github.io/mlx90640-driver-evb9064x-py/
    Source Code = https://github.com/melexis-fir/mlx90640-driver-evb9064x-py
    Issue Tracker = https://github.com/melexis-fir/mlx90640-driver-evb9064x-py/issues
license = Apache License, Version 2.0
author = Karel Vanroye
author_email = kva@melexis.com
maintainer = melexis-fir
description = I2C for MLX90640 using the EVB90640-41 on (windows 10, linux pc, raspberry pi, jetson nano, beagle bone, ...)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = mlx90640_evb9064x
package_dir = mlx90640_evb9064x=evb9064x
include_package_data = true
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    mlx90640-evb9064x-dump = mlx90640_evb9064x.cli:main

[options.package_data]
mlx90640_evb9064x = 
    libs/**/*.dll
    libs/**/*.so
